# CDSA_Semantic_Annotation_Analysis

./: UI.py  main.py  pyproject.toml  readme.md  requirements.txt
Data/: CDSA SEMANTIC DATA ANNOTATION.docx  result.json  result.txt  result2.json
Data/Datasets/: Aam Aadmi Bima Yojana.csv  Direct Benefit Transfer (DBT) Disbursements - Statewise, Schemewise Data.csv  National Achievement Survey (NAS) Survey of Learning Outcomes - District report for Class 3.csv  National Achievement Survey (NAS) Survey of Learning Outcomes - District report for Class 5.csv  Principal Characteristics by Type of Organisation.csv  State Level Climate Vulnerability Indicators.csv  Statewise and Monthwise Requirement and Availability of Chemical Fertilizers.csv
Data/Outputs/: Aam Aadmi Bima Yojana.json  Direct Benefit Transfer (DBT) Disbursements - Statewise, Schemewise Data.json  Estimated Number and Area of Operational Holdings by Size Classes and Tenancy Status.json  Estimated Number of Operational Holdings who owned or hired and used Agricultural Machinery By Size Groups.json  National Achievement Survey (NAS) Survey of Learning Outcomes - District report for Class 3.json  National Achievement Survey (NAS) Survey of Learning Outcomes - District report for Class 5.json  Principal Characteristics by Type of Organisation.json  Social Category wise Estimated Number of Operational Holdings by Size Classes and Irrigation Status.json  State Level Climate Vulnerability Indicators.json  mizoram_accepted.json  (+1 more)
Data/TestFiles/: newFile2.csv
streamlit/: result.json  test.csv
